EXLM-3778 Fix truncation in Icon block

--- a/blocks/icon-block/icon-block.css
+++ b/blocks/icon-block/icon-block.css
@@ -47,6 +47,11 @@
   margin-bottom: 16px;
   line-height: 18.2px;
   color: var(--spectrum-gray-700);
+  text-overflow: ellipsis;
+  -webkit-line-clamp: 6;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  display: -webkit-box;
   flex: 1;
 }
 
